kubernetes-files/configuration-deployment-q.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: configservice
  name: configservice-q
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configservice
  template:
    metadata:
      labels:
        app: configservice
    spec:
      containers:
      - name: configservice
        image: quay.io/burrsutter/configuration-service-q-jvm:1.0.2
        ports:
          - containerPort: 8080
