kubernetes-files/gameserver-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: gameserver
  name: gameserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gameserver
  template:
    metadata:
      labels:
        app: gameserver
    spec:
      containers:
      - name: gameserver
        image: quay.io/burrsutter/balloon-game-server-jvm:1.0.3
        ports:
          - containerPort: 8080
        volumeMounts:
            - name: public-key
              mountPath: "/usr/app"
              readOnly: true
        resources:
          requests:
            memory: "500Mi"
            cpu: "1000m" # 1 core
          limits:
            memory: "500Mi"
            cpu: "1000m" # 1 core              
      volumes:
        - name: public-key
          secret:
            secretName: jwt-public-key
            items:
              - key: publicKey
                path: publicKey
        

                
        # livenessProbe:
        #   httpGet:
        #       port: 8080
        #       path: /
        #   initialDelaySeconds: 1
        #   periodSeconds: 5
        #   timeoutSeconds: 2
        # readinessProbe:
        #   httpGet:
        #     path: /healthz
        #     port: 8080
        #   initialDelaySeconds: 1
        #   periodSeconds: 3
