kubernetes-files/configuration-kn-q.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: configservice
  labels:
    serving.knative.dev/visibility: "cluster-local"  
spec:
  template:
    spec:
      containers:
      - image: quay.io/burrsutter/configuration-service-q-jvm:1.0.0
        env:
        - name: QUARKUS_HTTP_PORT
          value: '8080'
