kubernetes-files/configuration-service-q.yaml
apiVersion: v1
kind: Service
metadata:
  name: configservice-q
  labels:
    app: configservice-q
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: configservice-q
  type: ClusterIP
