kubernetes-files/configuration-service-sb.yaml
apiVersion: v1
kind: Service
metadata:
  name: configservice-sb
  labels:
    app: configservice-sb
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: configservice-sb
  type: ClusterIP
