kubernetes-files/gameclient-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gameclient
  labels:
    app: gameclient
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: gameclient
  type: ClusterIP
