kubernetes-files/gameserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gameserver
  labels:
    app: gameserver
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: gameserver
  type: LoadBalancer
