kubernetes-files/gameclient-route-gameclienttoserver.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gameclienttoserver
  namespace: game
  labels:
    app: gameclienttoserver
spec:
  host: game-client-game.apps.aws.burrsutter.org
  path: /game
  to:
    kind: Service
    name: gameserver
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
