kubernetes-files/gameclient-route-ip.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: game-client
  namespace: game
  labels:
    app: gameclient
spec:
  host: kubejava.com
  to:
    kind: Service
    name: gameclient
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
